# dataloom-wisconsin-breast-cancer

./: .gitignore  README.md  generate_jsonld.py  main.py  main_gru_svm.py  main_linear_regression.py  main_logistic_regression.py  pyproject.toml  utils.py
docs/: README.md
models/: MLP.py  gru_svm.py  linear_regression.py  logistic_regression.py  nearest_neighbor.py  svm.py
results/: metrics.csv  paper-conclusions.jsonld
wdbc_loom_analysis/statements/: statement_01.py  statement_02.py  statement_03.py  statement_04.py  statement_05.py  statement_06.py
