[project]
name = "wisconsin-breast-cancer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib==3.9.4",
    "numpy==2.0.2",
    "scikit-learn==1.6.1",
    "setuptools==80.10.2",
    "tensorflow==2.20.0",
    "tf-keras==2.20.1",
]
