[project]
name = "dataloom-wisconsin-breast-cancer"
version = "0.1.0"
description = "This project is a machine readable translation of the wisconsin-breast-cancer dataset analysis and study, to make it compatibile with the Loom project"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dtreg>=1.1.2",
    "matplotlib==3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn==1.6.1",
    "setuptools==80.10.2",
    "tensorflow==2.20.0",
    "tf-keras==2.20.1",
]
